[gd_scene load_steps=73 format=3 uid="uid://x74xb0jkqjav"]

[ext_resource type="Theme" uid="uid://bpftg43rvkp5w" path="res://Botaostema.tres" id="1_3a7kf"]
[ext_resource type="Script" uid="uid://b8awhjauqn7j1" path="res://Scripts/Tutorial.gd" id="1_d4co1"]
[ext_resource type="Texture2D" uid="uid://c440lc2feiwm8" path="res://Assets/Cena de fundo das perguntas.png" id="2_v83ph"]
[ext_resource type="Texture2D" uid="uid://dfxnexu1rf61b" path="res://Personagens/phoenix/Animation_004-balança cabeça/Frame_0022.png" id="3_5kepw"]
[ext_resource type="Texture2D" uid="uid://c1egpa446x0or" path="res://Personagens/phoenix/Animation_004-balança cabeça/Frame_0023.png" id="4_kwjc1"]
[ext_resource type="Texture2D" uid="uid://jcl4twg2w2hp" path="res://Personagens/phoenix/Animation_004-balança cabeça/Frame_0024.png" id="5_oah3g"]
[ext_resource type="Texture2D" uid="uid://cl2fct0wswpe1" path="res://Personagens/Manfred/Animation_006-NONONO/Frame_0014.png" id="6_h6ug4"]
[ext_resource type="Texture2D" uid="uid://d3norsmjjtl8k" path="res://Personagens/Manfred/Animation_006-NONONO/Frame_0015.png" id="7_tjg8m"]
[ext_resource type="Texture2D" uid="uid://cttgo4itdq2x1" path="res://Personagens/Manfred/Animation_006-NONONO/Frame_0017.png" id="8_6b418"]
[ext_resource type="Texture2D" uid="uid://cumfhl8thifp7" path="res://Personagens/Manfred/Animation_006-NONONO/Frame_0019.png" id="9_wpe2i"]
[ext_resource type="Texture2D" uid="uid://c11dsbmu86dxb" path="res://Personagens/Manfred/Animation_006-NONONO/Frame_0018.png" id="10_aold8"]
[ext_resource type="Texture2D" uid="uid://bc1u6smhd5wbh" path="res://Personagens/Manfred/Animation_006-NONONO/Frame_0020.png" id="11_nrn4s"]
[ext_resource type="Texture2D" uid="uid://byi6jfs3gg7al" path="res://Personagens/Manfred/Animation_006-NONONO/Frame_0021.png" id="12_ua1wr"]
[ext_resource type="Texture2D" uid="uid://x50kx0px80ju" path="res://Personagens/Manfred/Animation_006-NONONO/Frame_0022.png" id="13_2h7qj"]
[ext_resource type="Texture2D" uid="uid://cqot52dbh4n2b" path="res://Personagens/Manfred/Animation_006-NONONO/Frame_0023.png" id="14_wpfq8"]
[ext_resource type="Texture2D" uid="uid://cup3irwd3vukl" path="res://Personagens/Manfred/Animation_015-FIM/Frame_0054.png" id="15_dgyk2"]
[ext_resource type="Texture2D" uid="uid://q2vqqer7mthn" path="res://Personagens/Manfred/Animation_015-FIM/Frame_0055.png" id="16_j141v"]
[ext_resource type="Texture2D" uid="uid://c4dgkfcox5x18" path="res://Personagens/phoenix/Animation_016-Ganhou/Frame_0088.png" id="17_p0vrf"]
[ext_resource type="Texture2D" uid="uid://dgf7ghcywonjs" path="res://Personagens/phoenix/Animation_016-Ganhou/Frame_0089.png" id="18_mpmvj"]
[ext_resource type="Texture2D" uid="uid://lv7r12uni4uf" path="res://Personagens/phoenix/Animation_016-Ganhou/Frame_0090.png" id="19_4c0ot"]
[ext_resource type="Texture2D" uid="uid://btw7qlhgab6ba" path="res://Personagens/Manfred/Animation_000-idle/Frame_0000.png" id="20_lwt1w"]
[ext_resource type="Texture2D" uid="uid://b41v2bxy5swcm" path="res://Personagens/phoenix/Animation_000-idle/Frame_0000.png" id="21_i5k3o"]
[ext_resource type="Texture2D" uid="uid://cx4h2cn1lssu1" path="res://Personagens/phoenix/Animation_000-idle/Frame_0001.png" id="22_n0mmj"]
[ext_resource type="Texture2D" uid="uid://b4qk68ctixn31" path="res://Personagens/phoenix/Animation_000-idle/Frame_0002.png" id="23_tbsad"]
[ext_resource type="Texture2D" uid="uid://odfvoci56bxa" path="res://Personagens/phoenix/Animation_005-Nega com a cabeça/Frame_0025.png" id="24_12ibt"]
[ext_resource type="Texture2D" uid="uid://jp0dsse3c3af" path="res://Personagens/phoenix/Animation_005-Nega com a cabeça/Frame_0026.png" id="25_6lr30"]
[ext_resource type="Texture2D" uid="uid://d3o2bdtum63xe" path="res://Personagens/phoenix/Animation_005-Nega com a cabeça/Frame_0028.png" id="26_xaqq5"]
[ext_resource type="Texture2D" uid="uid://bbam4h1e64o2b" path="res://Personagens/phoenix/Animation_005-Nega com a cabeça/Frame_0027.png" id="27_yuy0a"]
[ext_resource type="Texture2D" uid="uid://j5pqjb2rnft2" path="res://Personagens/phoenix/Animation_005-Nega com a cabeça/Frame_0029.png" id="28_5fh83"]
[ext_resource type="Texture2D" uid="uid://bw7jqgatb5hvf" path="res://Personagens/Manfred/Animation_004-Nervoso/Frame_0008.png" id="29_hw70b"]
[ext_resource type="Texture2D" uid="uid://djsfeus8csfsy" path="res://Personagens/Manfred/Animation_004-Nervoso/Frame_0009.png" id="30_cky41"]
[ext_resource type="Texture2D" uid="uid://b628tatfy4qo8" path="res://Personagens/Manfred/Animation_004-Nervoso/Frame_0010.png" id="31_nu0wn"]
[ext_resource type="Texture2D" uid="uid://irq24vqf7688" path="res://Personagens/phoenix/Animation_002-pensa/Frame_0013.png" id="32_2588n"]
[ext_resource type="Texture2D" uid="uid://c1eh6lb80s82p" path="res://Personagens/phoenix/Animation_002-pensa/Frame_0014.png" id="33_l0m0m"]
[ext_resource type="Texture2D" uid="uid://tctlyssjbccx" path="res://Personagens/phoenix/Animation_002-pensa/Frame_0016.png" id="34_pst4h"]
[ext_resource type="Texture2D" uid="uid://d3gc7dic1qd4q" path="res://Personagens/phoenix/Animation_002-pensa/Frame_0012.png" id="35_plvh1"]
[ext_resource type="Texture2D" uid="uid://yngrsai4vb6f" path="res://Personagens/phoenix/Animation_002-pensa/Frame_0015.png" id="36_8t4km"]
[ext_resource type="Texture2D" uid="uid://77nxchshoab6" path="res://Personagens/phoenix/Animation_002-pensa/Frame_0011.png" id="37_iofm8"]
[ext_resource type="Texture2D" uid="uid://daf3owvw00wva" path="res://Personagens/phoenix/Animation_002-pensa/Frame_0008.png" id="38_kcba0"]
[ext_resource type="Texture2D" uid="uid://cv50qgjqoi7c" path="res://Personagens/Manfred/Animation_008-Perdendo/Frame_0025.png" id="39_8v3kt"]
[ext_resource type="Texture2D" uid="uid://d3jhrn6mjx0ox" path="res://Personagens/Manfred/Animation_008-Perdendo/Frame_0026.png" id="40_i67ic"]
[ext_resource type="Texture2D" uid="uid://pnb4rn7e3jry" path="res://Personagens/Manfred/Animation_008-Perdendo/Frame_0027.png" id="41_twh1c"]
[ext_resource type="Texture2D" uid="uid://y3mo7aeuvai0" path="res://Personagens/Manfred/Animation_008-Perdendo/Frame_0028.png" id="42_3fwxs"]
[ext_resource type="Texture2D" uid="uid://cboml3eicvs8p" path="res://Personagens/phoenix/Animation_014-perdendo/Frame_0074.png" id="43_e7xsf"]
[ext_resource type="Texture2D" uid="uid://cenxtetgc0jqr" path="res://Personagens/phoenix/Animation_014-perdendo/Frame_0075.png" id="44_c4sfs"]
[ext_resource type="Texture2D" uid="uid://se52nbdg3p80" path="res://Personagens/phoenix/Animation_014-perdendo/Frame_0076.png" id="45_7025x"]
[ext_resource type="Texture2D" uid="uid://gxxe2xd6gsqa" path="res://Personagens/phoenix/Animation_014-perdendo/Frame_0077.png" id="46_idxmt"]
[ext_resource type="Texture2D" uid="uid://cgatwacmwdwc3" path="res://Personagens/phoenix/Animation_014-perdendo/Frame_0078.png" id="47_ajigg"]
[ext_resource type="Texture2D" uid="uid://b5kgdyjy1qr7k" path="res://Personagens/phoenix/Animation_014-perdendo/Frame_0079.png" id="48_fkdk7"]
[ext_resource type="Texture2D" uid="uid://dvurxixss7an1" path="res://Personagens/phoenix/Animation_014-perdendo/Frame_0080.png" id="49_5uk4i"]
[ext_resource type="Texture2D" uid="uid://c2q15caerlm2o" path="res://Personagens/Manfred/Animation_014-MORREU/Frame_0048.png" id="50_ilehq"]
[ext_resource type="Texture2D" uid="uid://bfi81j36iwpg1" path="res://Personagens/Manfred/Animation_014-MORREU/Frame_0049.png" id="51_acoml"]
[ext_resource type="Texture2D" uid="uid://ova1hem5iq5e" path="res://Personagens/Manfred/Animation_014-MORREU/Frame_0050.png" id="52_lu1go"]
[ext_resource type="Texture2D" uid="uid://c11x2s87t5wvc" path="res://Personagens/Manfred/Animation_014-MORREU/Frame_0051.png" id="53_vmv8x"]
[ext_resource type="Texture2D" uid="uid://ddj5a6gdejxs0" path="res://Personagens/Manfred/Animation_014-MORREU/Frame_0053.png" id="54_n0557"]
[ext_resource type="Texture2D" uid="uid://bibrqjwa66l1c" path="res://Personagens/Manfred/Animation_014-MORREU/Frame_0052.png" id="55_titsc"]
[ext_resource type="Texture2D" uid="uid://bfusig0j071es" path="res://Personagens/phoenix/Animation_018-perdeu/Frame_0097.png" id="56_3yr5l"]
[ext_resource type="Texture2D" uid="uid://diobiyvsru5q1" path="res://Personagens/phoenix/Animation_018-perdeu/Frame_0101.png" id="57_j1lmw"]
[ext_resource type="Texture2D" uid="uid://lx276rup55ji" path="res://Personagens/phoenix/Animation_018-perdeu/Frame_0102.png" id="58_w5epn"]
[ext_resource type="Texture2D" uid="uid://7nte3mdas0k0" path="res://Personagens/phoenix/Animation_018-perdeu/Frame_0103.png" id="59_cic7o"]
[ext_resource type="Texture2D" uid="uid://cv6h3lrd5jauk" path="res://Personagens/phoenix/Animation_018-perdeu/Frame_0100.png" id="60_rkbqo"]
[ext_resource type="Texture2D" uid="uid://b6x8glggiycs7" path="res://Personagens/phoenix/Animation_018-perdeu/Frame_0098.png" id="61_hdmo7"]
[ext_resource type="Texture2D" uid="uid://bgeo6m1u85f6n" path="res://Personagens/phoenix/Animation_018-perdeu/Frame_0099.png" id="62_wi7gq"]
[ext_resource type="Texture2D" uid="uid://cl8rl7rlikulg" path="res://Personagens/Manfred/Animation_002-Sorriso/Frame_0004.png" id="63_ieve0"]
[ext_resource type="Texture2D" uid="uid://cimw1rav8re75" path="res://Assets/FRENTE - Cena de fundo das perguntas.png" id="64_xx3b6"]
[ext_resource type="Texture2D" uid="uid://bl576t30p5tsk" path="res://Assets/ui-pack-space-expansion/Vector/Extra/bar_shadow_round_large.svg" id="65_ujctg"]
[ext_resource type="Texture2D" uid="uid://b3daea7w2ttuq" path="res://Assets/ui-pack-space-expansion/Vector/Blue/bar_round_gloss_large.svg" id="66_y10o3"]
[ext_resource type="Texture2D" uid="uid://dn36yjas158p4" path="res://Assets/ui-pack-space-expansion/Vector/Red/bar_round_gloss_large.svg" id="67_wnah3"]
[ext_resource type="AudioStream" uid="uid://frf4r6e01jkr" path="res://Sons/(Jogador Acertou) sfx-lightbulb.wav" id="68_ubsjv"]
[ext_resource type="AudioStream" uid="uid://c72s25shc2osc" path="res://Sons/(Tutorial)1-02 Defendant Lobby - So it Begins.mp3" id="68_ykwko"]
[ext_resource type="AudioStream" uid="uid://bibqfno4s20le" path="res://Sons/(Jogador Errou) sfx-lightbang.wav" id="69_2gqui"]

[sub_resource type="SpriteFrames" id="SpriteFrames_orqml"]
animations = [{
"frames": [{
"duration": 6.0,
"texture": ExtResource("3_5kepw")
}, {
"duration": 2.0,
"texture": ExtResource("4_kwjc1")
}, {
"duration": 2.0,
"texture": ExtResource("5_oah3g")
}, {
"duration": 3.0,
"texture": ExtResource("4_kwjc1")
}, {
"duration": 6.0,
"texture": ExtResource("3_5kepw")
}],
"loop": true,
"name": &"ACERTEI-Phoenix",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_h6ug4")
}, {
"duration": 1.0,
"texture": ExtResource("7_tjg8m")
}, {
"duration": 2.0,
"texture": ExtResource("8_6b418")
}, {
"duration": 3.0,
"texture": ExtResource("9_wpe2i")
}, {
"duration": 2.0,
"texture": ExtResource("8_6b418")
}, {
"duration": 3.0,
"texture": ExtResource("10_aold8")
}, {
"duration": 2.0,
"texture": ExtResource("8_6b418")
}, {
"duration": 1.0,
"texture": ExtResource("9_wpe2i")
}, {
"duration": 2.0,
"texture": ExtResource("9_wpe2i")
}, {
"duration": 1.0,
"texture": ExtResource("11_nrn4s")
}, {
"duration": 1.0,
"texture": ExtResource("12_ua1wr")
}, {
"duration": 3.0,
"texture": ExtResource("13_2h7qj")
}, {
"duration": 1.0,
"texture": ExtResource("12_ua1wr")
}, {
"duration": 1.0,
"texture": ExtResource("14_wpfq8")
}, {
"duration": 1.0,
"texture": ExtResource("12_ua1wr")
}, {
"duration": 3.0,
"texture": ExtResource("13_2h7qj")
}, {
"duration": 1.0,
"texture": ExtResource("12_ua1wr")
}, {
"duration": 1.0,
"texture": ExtResource("14_wpfq8")
}],
"loop": true,
"name": &"Errou-Manfred",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_dgyk2")
}, {
"duration": 1.0,
"texture": ExtResource("16_j141v")
}],
"loop": true,
"name": &"FIM-Manfred",
"speed": 20.0
}, {
"frames": [{
"duration": 13.0,
"texture": ExtResource("17_p0vrf")
}, {
"duration": 2.0,
"texture": ExtResource("18_mpmvj")
}, {
"duration": 2.0,
"texture": ExtResource("19_4c0ot")
}, {
"duration": 2.0,
"texture": ExtResource("18_mpmvj")
}, {
"duration": 50.0,
"texture": ExtResource("17_p0vrf")
}, {
"duration": 2.0,
"texture": ExtResource("18_mpmvj")
}, {
"duration": 2.0,
"texture": ExtResource("19_4c0ot")
}, {
"duration": 2.0,
"texture": ExtResource("18_mpmvj")
}, {
"duration": 43.0,
"texture": ExtResource("17_p0vrf")
}],
"loop": true,
"name": &"Ganhou-Phoenix",
"speed": 20.0
}, {
"frames": [{
"duration": 17.0,
"texture": ExtResource("20_lwt1w")
}],
"loop": true,
"name": &"Idle-Manfred",
"speed": 20.0
}, {
"frames": [{
"duration": 25.0,
"texture": ExtResource("21_i5k3o")
}, {
"duration": 1.0,
"texture": ExtResource("22_n0mmj")
}, {
"duration": 1.0,
"texture": ExtResource("23_tbsad")
}, {
"duration": 1.0,
"texture": ExtResource("22_n0mmj")
}, {
"duration": 25.0,
"texture": ExtResource("21_i5k3o")
}, {
"duration": 1.0,
"texture": ExtResource("22_n0mmj")
}, {
"duration": 1.0,
"texture": ExtResource("23_tbsad")
}, {
"duration": 1.0,
"texture": ExtResource("22_n0mmj")
}, {
"duration": 25.0,
"texture": ExtResource("21_i5k3o")
}],
"loop": true,
"name": &"Idle-Phoenix",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("24_12ibt")
}, {
"duration": 2.0,
"texture": ExtResource("25_6lr30")
}, {
"duration": 3.0,
"texture": ExtResource("26_xaqq5")
}, {
"duration": 2.0,
"texture": ExtResource("27_yuy0a")
}, {
"duration": 2.0,
"texture": ExtResource("28_5fh83")
}, {
"duration": 2.0,
"texture": ExtResource("27_yuy0a")
}, {
"duration": 2.0,
"texture": ExtResource("26_xaqq5")
}, {
"duration": 2.0,
"texture": ExtResource("27_yuy0a")
}, {
"duration": 2.0,
"texture": ExtResource("25_6lr30")
}, {
"duration": 6.0,
"texture": ExtResource("24_12ibt")
}],
"loop": true,
"name": &"NEGAR-Phoenix",
"speed": 20.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("29_hw70b")
}, {
"duration": 1.0,
"texture": ExtResource("30_cky41")
}, {
"duration": 50.0,
"texture": ExtResource("31_nu0wn")
}, {
"duration": 2.0,
"texture": ExtResource("30_cky41")
}],
"loop": true,
"name": &"Nervoso-Manfred",
"speed": 20.0
}, {
"frames": [{
"duration": 4.0,
"texture": ExtResource("32_2588n")
}, {
"duration": 4.0,
"texture": ExtResource("33_l0m0m")
}, {
"duration": 4.0,
"texture": ExtResource("32_2588n")
}, {
"duration": 8.0,
"texture": ExtResource("33_l0m0m")
}, {
"duration": 2.0,
"texture": ExtResource("34_pst4h")
}, {
"duration": 2.0,
"texture": ExtResource("35_plvh1")
}, {
"duration": 2.0,
"texture": ExtResource("34_pst4h")
}, {
"duration": 5.0,
"texture": ExtResource("33_l0m0m")
}, {
"duration": 4.0,
"texture": ExtResource("32_2588n")
}, {
"duration": 4.0,
"texture": ExtResource("33_l0m0m")
}, {
"duration": 4.0,
"texture": ExtResource("36_8t4km")
}, {
"duration": 4.0,
"texture": ExtResource("32_2588n")
}, {
"duration": 4.0,
"texture": ExtResource("33_l0m0m")
}, {
"duration": 4.0,
"texture": ExtResource("36_8t4km")
}, {
"duration": 4.0,
"texture": ExtResource("32_2588n")
}, {
"duration": 4.0,
"texture": ExtResource("33_l0m0m")
}, {
"duration": 4.0,
"texture": ExtResource("36_8t4km")
}, {
"duration": 4.0,
"texture": ExtResource("32_2588n")
}, {
"duration": 4.0,
"texture": ExtResource("33_l0m0m")
}, {
"duration": 4.0,
"texture": ExtResource("36_8t4km")
}, {
"duration": 4.0,
"texture": ExtResource("34_pst4h")
}, {
"duration": 2.0,
"texture": ExtResource("35_plvh1")
}, {
"duration": 2.0,
"texture": ExtResource("37_iofm8")
}, {
"duration": 25.0,
"texture": ExtResource("38_kcba0")
}, {
"duration": 2.0,
"texture": ExtResource("37_iofm8")
}, {
"duration": 2.0,
"texture": ExtResource("35_plvh1")
}, {
"duration": 2.0,
"texture": ExtResource("34_pst4h")
}],
"loop": true,
"name": &"Pensando-Phoenix",
"speed": 20.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("39_8v3kt")
}, {
"duration": 2.0,
"texture": ExtResource("40_i67ic")
}, {
"duration": 2.0,
"texture": ExtResource("41_twh1c")
}, {
"duration": 2.0,
"texture": ExtResource("42_3fwxs")
}],
"loop": true,
"name": &"Perdendo-Manfred",
"speed": 20.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("43_e7xsf")
}, {
"duration": 2.0,
"texture": ExtResource("44_c4sfs")
}, {
"duration": 2.0,
"texture": ExtResource("45_7025x")
}, {
"duration": 2.0,
"texture": ExtResource("46_idxmt")
}, {
"duration": 2.0,
"texture": ExtResource("43_e7xsf")
}, {
"duration": 2.0,
"texture": ExtResource("47_ajigg")
}, {
"duration": 2.0,
"texture": ExtResource("48_fkdk7")
}, {
"duration": 2.0,
"texture": ExtResource("49_5uk4i")
}, {
"duration": 2.0,
"texture": ExtResource("43_e7xsf")
}, {
"duration": 2.0,
"texture": ExtResource("44_c4sfs")
}, {
"duration": 2.0,
"texture": ExtResource("45_7025x")
}, {
"duration": 2.0,
"texture": ExtResource("46_idxmt")
}, {
"duration": 2.0,
"texture": ExtResource("43_e7xsf")
}, {
"duration": 2.0,
"texture": ExtResource("44_c4sfs")
}, {
"duration": 2.0,
"texture": ExtResource("45_7025x")
}, {
"duration": 2.0,
"texture": ExtResource("46_idxmt")
}, {
"duration": 2.0,
"texture": ExtResource("43_e7xsf")
}, {
"duration": 2.0,
"texture": ExtResource("44_c4sfs")
}, {
"duration": 2.0,
"texture": ExtResource("45_7025x")
}, {
"duration": 2.0,
"texture": ExtResource("46_idxmt")
}],
"loop": true,
"name": &"Perdendo-Phoenix",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("50_ilehq")
}, {
"duration": 2.0,
"texture": ExtResource("51_acoml")
}, {
"duration": 2.0,
"texture": ExtResource("52_lu1go")
}, {
"duration": 1.0,
"texture": ExtResource("53_vmv8x")
}, {
"duration": 6.0,
"texture": ExtResource("52_lu1go")
}, {
"duration": 1.0,
"texture": ExtResource("54_n0557")
}, {
"duration": 1.0,
"texture": ExtResource("55_titsc")
}, {
"duration": 1.0,
"texture": ExtResource("54_n0557")
}, {
"duration": 1.0,
"texture": ExtResource("55_titsc")
}, {
"duration": 1.0,
"texture": ExtResource("54_n0557")
}, {
"duration": 1.0,
"texture": ExtResource("55_titsc")
}, {
"duration": 1.0,
"texture": ExtResource("54_n0557")
}, {
"duration": 1.0,
"texture": ExtResource("55_titsc")
}, {
"duration": 1.0,
"texture": ExtResource("54_n0557")
}, {
"duration": 1.0,
"texture": ExtResource("55_titsc")
}, {
"duration": 1.0,
"texture": ExtResource("54_n0557")
}, {
"duration": 1.0,
"texture": ExtResource("55_titsc")
}, {
"duration": 1.0,
"texture": ExtResource("54_n0557")
}, {
"duration": 1.0,
"texture": ExtResource("55_titsc")
}, {
"duration": 1.0,
"texture": ExtResource("54_n0557")
}, {
"duration": 1.0,
"texture": ExtResource("55_titsc")
}, {
"duration": 1.0,
"texture": ExtResource("54_n0557")
}, {
"duration": 1.0,
"texture": ExtResource("55_titsc")
}, {
"duration": 1.0,
"texture": ExtResource("54_n0557")
}, {
"duration": 1.0,
"texture": ExtResource("55_titsc")
}, {
"duration": 1.0,
"texture": ExtResource("54_n0557")
}, {
"duration": 1.0,
"texture": ExtResource("55_titsc")
}, {
"duration": 1.0,
"texture": ExtResource("54_n0557")
}, {
"duration": 1.0,
"texture": ExtResource("55_titsc")
}, {
"duration": 1.0,
"texture": ExtResource("54_n0557")
}, {
"duration": 1.0,
"texture": ExtResource("55_titsc")
}, {
"duration": 1.0,
"texture": ExtResource("54_n0557")
}, {
"duration": 1.0,
"texture": ExtResource("55_titsc")
}, {
"duration": 1.0,
"texture": ExtResource("54_n0557")
}, {
"duration": 1.0,
"texture": ExtResource("55_titsc")
}, {
"duration": 1.0,
"texture": ExtResource("54_n0557")
}, {
"duration": 1.0,
"texture": ExtResource("55_titsc")
}],
"loop": true,
"name": &"Perdeu-Manfred",
"speed": 20.0
}, {
"frames": [{
"duration": 4.0,
"texture": ExtResource("56_3yr5l")
}, {
"duration": 1.0,
"texture": ExtResource("57_j1lmw")
}, {
"duration": 1.0,
"texture": ExtResource("58_w5epn")
}, {
"duration": 1.0,
"texture": ExtResource("59_cic7o")
}, {
"duration": 5.0,
"texture": ExtResource("60_rkbqo")
}, {
"duration": 1.0,
"texture": ExtResource("56_3yr5l")
}, {
"duration": 4.0,
"texture": ExtResource("61_hdmo7")
}, {
"duration": 3.0,
"texture": ExtResource("60_rkbqo")
}, {
"duration": 8.0,
"texture": ExtResource("62_wi7gq")
}],
"loop": true,
"name": &"Perdeu-Phoenix",
"speed": 20.0
}, {
"frames": [{
"duration": 17.0,
"texture": ExtResource("63_ieve0")
}],
"loop": true,
"name": &"Sorriso-Manfred",
"speed": 20.0
}]

[node name="Node2D" type="Node2D"]

[node name="Telacentral" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3a7kf")
script = ExtResource("1_d4co1")

[node name="Cenário" type="TextureRect" parent="Telacentral"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -51.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_v83ph")
metadata/_edit_lock_ = true

[node name="AnimatedSprite2D2-Phoenix" type="AnimatedSprite2D" parent="Telacentral"]
texture_filter = 1
position = Vector2(358, 359)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_orqml")
animation = &"Idle-Phoenix"
frame_progress = 0.142351
metadata/_edit_lock_ = true

[node name="AnimatedSprite2D-Manfred" type="AnimatedSprite2D" parent="Telacentral"]
texture_filter = 1
position = Vector2(804, 359)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_orqml")
animation = &"Idle-Manfred"
frame_progress = 0.510772
metadata/_edit_lock_ = true

[node name="Frente cenário" type="TextureRect" parent="Telacentral"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -51.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("64_xx3b6")
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="Telacentral"]
layout_mode = 0
offset_left = 384.0
offset_right = 768.0
offset_bottom = 246.0

[node name="Mostrar texto" type="Label" parent="Telacentral"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -192.0
offset_right = 192.0
offset_bottom = 246.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = " Bem-vindo ao tutorial! Aqui você aprenderá as regras do jogo."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Telacentral"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -27.0
offset_right = 144.0
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Telacentral/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="Button" type="Button" parent="Telacentral/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "  "

[node name="Button2" type="Button" parent="Telacentral/VBoxContainer/GridContainer"]
layout_mode = 2
text = " "

[node name="Button3" type="Button" parent="Telacentral/VBoxContainer/GridContainer"]
layout_mode = 2
text = " "

[node name="Button4" type="Button" parent="Telacentral/VBoxContainer/GridContainer"]
layout_mode = 2
text = " "

[node name="ResumoLabel" type="RichTextLabel" parent="Telacentral"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -305.0
offset_right = 192.0
offset_bottom = -115.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "test"
fit_content = true

[node name="BotaoProximo" type="Button" parent="Telacentral"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 95.0
offset_top = -115.0
offset_right = 145.0
offset_bottom = -85.0
grow_horizontal = 2
grow_vertical = 2
text = "Proximo"

[node name="BotaoAnterior" type="Button" parent="Telacentral"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -115.0
offset_right = -71.0
offset_bottom = -85.0
grow_horizontal = 2
grow_vertical = 2
text = "Anterior"

[node name="Menu Principal" type="Button" parent="Telacentral"]
layout_mode = 0
offset_left = 519.0
offset_top = 275.0
offset_right = 639.0
offset_bottom = 304.0
text = "Menu Principal"

[node name="CanvasLayer" type="CanvasLayer" parent="Telacentral"]

[node name="PlayerHealthBar" type="TextureProgressBar" parent="Telacentral/CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 242.0
offset_top = -101.0
offset_right = 370.0
offset_bottom = -77.0
grow_vertical = 2
value = 70.0
nine_patch_stretch = true
texture_under = ExtResource("65_ujctg")
texture_progress = ExtResource("66_y10o3")

[node name="BossHealthBar" type="TextureProgressBar" parent="Telacentral/CanvasLayer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -368.0
offset_top = -101.0
offset_right = -240.0
offset_bottom = -77.0
grow_horizontal = 0
grow_vertical = 2
value = 70.0
nine_patch_stretch = true
texture_under = ExtResource("65_ujctg")
texture_progress = ExtResource("67_wnah3")

[node name="Acertou" type="AudioStreamPlayer" parent="Telacentral"]
stream = ExtResource("68_ubsjv")

[node name="Errou" type="AudioStreamPlayer" parent="Telacentral"]
stream = ExtResource("69_2gqui")
volume_db = 10.0

[node name="Música de Fundo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("68_ykwko")
volume_db = -5.0
autoplay = true
parameters/looping = true

[connection signal="pressed" from="Telacentral/VBoxContainer/GridContainer/Button" to="Telacentral" method="_on_button_pressed"]
[connection signal="pressed" from="Telacentral/VBoxContainer/GridContainer/Button2" to="Telacentral" method="_on_button_2_pressed"]
[connection signal="pressed" from="Telacentral/VBoxContainer/GridContainer/Button3" to="Telacentral" method="_on_button_3_pressed"]
[connection signal="pressed" from="Telacentral/VBoxContainer/GridContainer/Button4" to="Telacentral" method="_on_button_4_pressed"]
[connection signal="pressed" from="Telacentral/BotaoProximo" to="Telacentral" method="_on_botao_proximo_pressed"]
[connection signal="pressed" from="Telacentral/BotaoAnterior" to="Telacentral" method="_on_botao_anterior_pressed"]
[connection signal="pressed" from="Telacentral/Menu Principal" to="Telacentral" method="_on_menu_principal_pressed"]
